--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.485.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1"
